Closed Bug 39305 Opened 25 years ago Closed 25 years ago

RDF content sink incorrectly adds "xmlns" directives as properties

Categories

(Core Graveyard :: RDF, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: waterson, Assigned: waterson)

Details

Attachments

(1 file)

The RDF/XML content sink adds "xmlns=" and "xmlns:foo=" directives as properties to the model. This causes (e.g.) corruption in the skin-switching RDF files.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
checked in.
verified
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: