Bug 39305. Do not add 'xmlns=' and 'xmlns:foo=' as properties to the RDF graph.